feat: teams opposition.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -84,9 +84,9 @@
     "from ipywidgets import interact, widgets\n",
     "from datetime import datetime\n",
     "\n",
-    "from postgres.PostgresQuerying import PostgresQuerying\n",
-    "from src.oppositions.PlayersOpposition import PlayersOpposition\n",
-    "from src.oppositions.TeamsOpposition import TeamsOpposition\n",
+    "from postgres.postgres_querying import PostgresQuerying\n",
+    "from src.oppositions.teams_opposition import TeamsOpposition\n",
+    "from src.oppositions.players_opposition import PlayersOpposition\n",
     "\n",
     "init_notebook_mode(all_interactive=True)"
    ]
@@ -113,6 +113,24 @@
    "metadata": {},
    "source": [
     "## Oppositions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: \n",
+    "#   class Utils qui fournit la liste des championnats, des saisons, ...\n",
+    "#   qui est importée aussi dans les classes de ranking / opposition pour faire les checks et les boucles"
    ]
   },
   {
@@ -146,7 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEAM = 'Rennes'"
+    "TEAM_SRFC = 'Rennes'\n",
+    "TEAM_PSG = 'Paris Saint-Germain FC'"
    ]
   },
   {
@@ -164,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_oppositions = teams_oppositions.build_oppositions(TEAM, ID_COMP, SEASON, SIDE)"
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM_PSG, [], [\"2024-2025\"], SIDE)"
    ]
   },
   {
@@ -198,11 +217,12 @@
        "}\n",
        "</style>\n",
        "<div class=\"itables\">\n",
-       "<table id=\"786c4ce6-df0c-4e0b-a03c-bb5e1eb857d2\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
+       "<table id=\"6d19eab1-78c5-4bc3-a8d6-550b9f9fef87\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Team</th>\n",
        "      <th>Opponent</th>\n",
+       "      <th>Competitions</th>\n",
        "      <th>Matches</th>\n",
        "      <th>Wins</th>\n",
        "      <th>Draws</th>\n",
@@ -216,6 +236,7 @@
        "      <th>Yellow Cards</th>\n",
        "      <th>Incl. 2 Yellow Cards</th>\n",
        "      <th>Red Cards</th>\n",
+       "      <th>Granularity Competition</th>\n",
        "    </tr>\n",
        "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
        "<script>\n",
@@ -223,7 +244,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[\"Rennes\", \"AJ Auxerre\", 1, 0, 0, 1, 0, 4, 7, 4, 15, 7, 2, 0, 0], [\"Rennes\", \"Angers SCO\", 1, 1, 0, 0, 2, 0, 7, 4, 3, 0, 3, 0, 0], [\"Rennes\", \"AS Monaco FC\", 2, 0, 0, 2, 3, 5, 28, 8, 25, 11, 5, 0, 0], [\"Rennes\", \"AS Saint-\\u00c9tienne\", 2, 2, 0, 0, 7, 0, 37, 15, 11, 3, 5, 0, 0], [\"Rennes\", \"FC Nantes\", 1, 0, 0, 1, 0, 1, 5, 3, 14, 2, 1, 0, 1], [\"Rennes\", \"Le Havre AC\", 1, 1, 0, 0, 1, 0, 20, 4, 5, 1, 2, 0, 0], [\"Rennes\", \"Lille OSC\", 1, 0, 0, 1, 0, 1, 4, 1, 5, 2, 2, 0, 0], [\"Rennes\", \"Montpellier HSC\", 1, 1, 0, 0, 3, 0, 11, 6, 12, 4, 1, 0, 0], [\"Rennes\", \"OGC Nice\", 1, 0, 0, 1, 2, 3, 10, 5, 9, 6, 3, 0, 0], [\"Rennes\", \"Olympique de Marseille\", 1, 0, 0, 1, 1, 2, 4, 3, 13, 7, 2, 0, 0], [\"Rennes\", \"Olympique Lyonnais\", 1, 1, 0, 0, 3, 0, 22, 8, 15, 1, 2, 0, 0], [\"Rennes\", \"Paris Saint-Germain FC\", 1, 0, 0, 1, 1, 3, 11, 4, 23, 7, 3, 0, 0], [\"Rennes\", \"RC Lens\", 1, 0, 1, 0, 1, 1, 10, 5, 10, 2, 2, 0, 0], [\"Rennes\", \"RC Strasbourg Alsace\", 2, 1, 0, 1, 2, 3, 27, 8, 18, 8, 7, 0, 0], [\"Rennes\", \"Stade Brestois 29\", 2, 0, 1, 1, 2, 3, 28, 13, 21, 4, 4, 0, 0], [\"Rennes\", \"Stade de Reims\", 1, 0, 0, 1, 1, 2, 13, 5, 11, 7, 1, 0, 0], [\"Rennes\", \"Toulouse FC\", 1, 0, 0, 1, 0, 2, 7, 1, 9, 2, 3, 0, 0]];\n",
+       "        const data = [[\"Paris Saint-Germain FC\", \"AJ Auxerre\", \"[Ligue 1]\", 1, 0, 1, 0, 0, 0, 24, 11, 6, 2, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Angers SCO\", \"[Ligue 1]\", 2, 2, 0, 0, 5, 2, 46, 18, 14, 3, 3, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Arsenal FC\", \"[UEFA Champions League]\", 1, 0, 0, 1, 0, 2, 10, 2, 6, 5, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"AS Monaco FC\", \"[Ligue 1]\", 2, 2, 0, 0, 8, 3, 33, 18, 23, 7, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"AS Saint-\\u00c9tienne\", \"[Ligue 1]\", 2, 2, 0, 0, 8, 2, 45, 17, 19, 5, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Aston Villa FC\", \"[UEFA Champions League]\", 2, 1, 0, 1, 5, 4, 43, 17, 24, 10, 0, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Atl\\u00e9tico Madrid\", \"[UEFA Champions League]\", 1, 0, 0, 1, 1, 2, 22, 9, 4, 3, 0, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"FC Bayern Munich\", \"[UEFA Champions League]\", 1, 0, 0, 1, 0, 1, 11, 3, 18, 7, 5, 1, 1, \"Competition\"], [\"Paris Saint-Germain FC\", \"FC Nantes\", \"[Ligue 1]\", 1, 0, 1, 0, 1, 1, 24, 10, 5, 2, 0, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Girona FC\", \"[UEFA Champions League]\", 1, 1, 0, 0, 1, 0, 26, 5, 3, 1, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Le Havre AC\", \"[Ligue 1]\", 1, 1, 0, 0, 4, 1, 14, 8, 5, 2, 0, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Lille OSC\", \"[Ligue 1]\", 2, 2, 0, 0, 7, 2, 36, 17, 14, 6, 2, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Liverpool FC\", \"[UEFA Champions League]\", 2, 1, 0, 1, 1, 1, 48, 17, 21, 3, 2, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Manchester City FC\", \"[UEFA Champions League]\", 1, 1, 0, 0, 4, 2, 26, 8, 9, 6, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Montpellier HSC\", \"[Ligue 1]\", 1, 1, 0, 0, 6, 0, 27, 11, 8, 3, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"OGC Nice\", \"[Ligue 1]\", 1, 0, 1, 0, 1, 1, 19, 7, 9, 3, 2, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Olympique de Marseille\", \"[Ligue 1]\", 2, 2, 0, 0, 6, 1, 35, 13, 16, 3, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Olympique Lyonnais\", \"[Ligue 1]\", 2, 2, 0, 0, 6, 3, 27, 12, 21, 10, 3, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"PSV Eindhoven\", \"[UEFA Champions League]\", 1, 0, 1, 0, 1, 1, 26, 8, 8, 3, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"RC Lens\", \"[Ligue 1]\", 2, 2, 0, 0, 3, 1, 27, 15, 23, 7, 3, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"RC Strasbourg Alsace\", \"[Ligue 1]\", 1, 1, 0, 0, 4, 2, 18, 10, 16, 7, 2, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Red Bull Salzburg\", \"[UEFA Champions League]\", 1, 1, 0, 0, 3, 0, 15, 8, 3, 1, 0, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Rennes\", \"[Ligue 1]\", 2, 2, 0, 0, 7, 2, 42, 16, 24, 7, 4, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Stade Brestois 29\", \"[Ligue 1]\", 2, 2, 0, 0, 8, 3, 36, 16, 18, 9, 2, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Stade Brestois 29\", \"[UEFA Champions League]\", 2, 2, 0, 0, 10, 0, 35, 15, 29, 4, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Stade Brestois 29\", \"[Ligue 1, UEFA Champions League]\", 4, 4, 0, 0, 18, 3, 71, 31, 47, 13, 3, 0, 0, \"TCC\"], [\"Paris Saint-Germain FC\", \"Stade de Reims\", \"[Ligue 1]\", 2, 0, 2, 0, 2, 2, 29, 11, 14, 4, 3, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"Toulouse FC\", \"[Ligue 1]\", 2, 2, 0, 0, 4, 0, 37, 14, 25, 6, 1, 0, 0, \"Competition\"], [\"Paris Saint-Germain FC\", \"VfB Stuttgart\", \"[UEFA Champions League]\", 1, 1, 0, 0, 4, 1, 13, 6, 10, 2, 1, 0, 0, \"Competition\"]];\n",
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            window.dataTablePromise.then(() => {\n",
@@ -232,7 +253,7 @@
        "                dt_args[\"data\"] = data;\n",
        "\n",
        "                \n",
-       "                $('#786c4ce6-df0c-4e0b-a03c-bb5e1eb857d2').DataTable(dt_args);\n",
+       "                $('#6d19eab1-78c5-4bc3-a8d6-550b9f9fef87').DataTable(dt_args);\n",
        "            });\n",
        "        })\n",
        "    }\n",
@@ -260,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,84 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.itables table td {\n",
-       "    text-overflow: ellipsis;\n",
-       "    overflow: hidden;\n",
-       "}\n",
-       "\n",
-       ".itables table th {\n",
-       "    text-overflow: ellipsis;\n",
-       "    overflow: hidden;\n",
-       "}\n",
-       "\n",
-       ".itables thead input {\n",
-       "    width: 100%;\n",
-       "    padding: 3px;\n",
-       "    box-sizing: border-box;\n",
-       "}\n",
-       "\n",
-       ".itables tfoot input {\n",
-       "    width: 100%;\n",
-       "    padding: 3px;\n",
-       "    box-sizing: border-box;\n",
-       "}\n",
-       "</style>\n",
-       "<div class=\"itables\">\n",
-       "<table id=\"2c895f66-bbb3-4779-a58b-edbb9946d513\" class=\"display nowrap\"style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\"><thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      \n",
-       "      <th>Player</th>\n",
-       "      <th>Opponent</th>\n",
-       "      <th>Matches</th>\n",
-       "      <th>Wins</th>\n",
-       "      <th>Draws</th>\n",
-       "      <th>Loses</th>\n",
-       "      <th>Goals</th>\n",
-       "      <th>Assists</th>\n",
-       "      <th>Minutes</th>\n",
-       "      <th>Minutes/Match</th>\n",
-       "      <th>Shots</th>\n",
-       "      <th>Shots on Target</th>\n",
-       "      <th>Yellow Cards</th>\n",
-       "      <th>Incl. 2 Yellow Cards</th>\n",
-       "      <th>Red Cards</th>\n",
-       "    </tr>\n",
-       "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
-       "<script>\n",
-       "    // We use a namespace per table (= the next curly bracket)\n",
-       "    // to avoid conflicts between the various tables' data & dt_args\n",
-       "    {\n",
-       "        // Define the table data\n",
-       "        const data = [[\"Djylian N'Guessan\", \"FC Nantes\", 1, 0, 1, 0, 0, 0, 59, \"59.00\", 1, 0, 0, 0, 0], [\"Djylian N'Guessan\", \"Rennes\", 1, 0, 0, 1, 0, 0, 15, \"15.00\", 1, 0, 0, 0, 0], [\"Djylian N'Guessan\", \"Stade de Reims\", 1, 1, 0, 0, 0, 0, 1, \"1.00\", 0, 0, 0, 0, 0]];\n",
-       "        // Display the table\n",
-       "        $(document).ready(function () {\n",
-       "            window.dataTablePromise.then(() => {\n",
-       "                // Define the dt_args\n",
-       "                let dt_args = {\"paging\": false, \"order\": [], \"dom\": \"t\"};\n",
-       "                dt_args[\"data\"] = data;\n",
-       "\n",
-       "                \n",
-       "                $('#2c895f66-bbb3-4779-a58b-edbb9946d513').DataTable(dt_args);\n",
-       "            });\n",
-       "        })\n",
-       "    }\n",
-       "</script>\n",
-       "</div>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show(p_oppositions, paging=False)"
    ]
@@ -378,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e803c98c3f14539bf13a7cc8ad29d63",
+       "model_id": "b639dc2affad4953a1a9dc840c0feebf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +383,7 @@
        "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,34 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be62698dd2a14518b13ff971540a53e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='stat', options=('Matches', 'Wins', 'Draws', 'Loses', 'Goals', 'Ass…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "interact(\n",
     "    players_oppositions.build_matrix, \n",
@@ -517,17 +438,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection to PostgreSQL closed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.close()"
    ]
