--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "from itables import init_notebook_mode, show\n",
+    "from ipywidgets import interact, widgets\n",
     "\n",
     "from postgres.postgres_querying import PostgresQuerying\n",
     "from src.rankings.teams_ranking import TeamsRanking\n",
@@ -52,6 +53,24 @@
    "metadata": {},
    "source": [
     "## Rankings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: \n",
+    "#   class Utils qui fournit la liste des championnats, des saisons, ...\n",
+    "#   qui est importée aussi dans les classes de ranking / opposition pour faire les checks et les boucles"
    ]
   },
   {
