feat: player_x_teams.

--- a/Rankings.ipynb
+++ b/Rankings.ipynb
@@ -32,7 +32,7 @@
     "from itables import init_notebook_mode, show\n",
     "from ipywidgets import interact, widgets\n",
     "\n",
-    "from postgres.postgres_querying import PostgresQuerying\n",
+    "from src.postgres.postgres_querying import PostgresQuerying\n",
     "from src.rankings.teams_ranking import TeamsRanking\n",
     "from src.rankings.players_ranking import PlayersRanking\n",
     "\n",
