fix: started reviewing teams oppositions.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -34,6 +34,8 @@
     "from datetime import datetime\n",
     "\n",
     "from src.postgres.postgres_querying import PostgresQuerying\n",
+    "from src.utils.data_loader import DataLoader\n",
+    "\n",
     "from src.oppositions.teams_opposition import TeamsOpposition\n",
     "from src.oppositions.players_opposition import PlayersOpposition\n",
     "\n",
@@ -69,9 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: \n",
-    "#   class Utils qui fournit la liste des championnats, des saisons, ...\n",
-    "#   qui est importée aussi dans les classes de ranking / opposition pour faire les checks et les boucles"
+    "data_loader = DataLoader(db)\n",
+    "seasons = data_loader.get_seasons()\n",
+    "comps = data_loader.get_competition_names()\n",
+    "sides = ['home', 'away', 'both']"
    ]
   },
   {
@@ -124,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_oppositions = teams_oppositions.build_oppositions(TEAM_PSG, [], [\"2024-2025\"], SIDE)"
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM_PSG, [\"Ligue 1\"], [], SIDE)"
    ]
   },
   {
@@ -194,18 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chps = ['ligue_1', 'la_liga', 'premier_league', 'serie_a', 'fussball_bundesliga']\n",
-    "seasons = ['2024-2025'] #[f\"{season}-{season+1}\" for season in range(datetime.now().year-5, datetime.now().year)]\n",
-    "sides = ['home', 'away', 'both']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# p_matrix = players_oppositions.build_matrix('Matches', ID_COMP, SEASON)"
+    "players_oppositions.build_matrix('Matches', ID_COMP, SEASON, SIDE)"
    ]
   },
   {
@@ -233,7 +225,7 @@
     "interact(\n",
     "    teams_oppositions.build_matrix, \n",
     "    stat=widgets.Dropdown(options=team_stats),\n",
-    "    id_comp=widgets.Dropdown(options=chps), \n",
+    "    id_comp=widgets.Dropdown(options=comps), \n",
     "    season=widgets.Dropdown(options=seasons),\n",
     "    side=widgets.Dropdown(options=sides)\n",
     ")"
@@ -264,7 +256,7 @@
     "interact(\n",
     "    players_oppositions.build_matrix, \n",
     "    stat=widgets.Dropdown(options=player_stats),\n",
-    "    id_comp=widgets.Dropdown(options=chps), \n",
+    "    id_comp=widgets.Dropdown(options=comps), \n",
     "    season=widgets.Dropdown(options=seasons),\n",
     "    side=widgets.Dropdown(options=sides)\n",
     ")"
