fix: finished reviewing teams oppositions with matrix.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -222,12 +222,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "teams_oppositions.build_matrix('Matches', [\"2024-2025\"], [\"Ligue 1\"], SIDE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interact(\n",
-    "    teams_oppositions.build_matrix, \n",
+    "    teams_oppositions.build_matrix_wrapper, \n",
     "    stat=widgets.Dropdown(options=team_stats),\n",
-    "    id_comp=widgets.Dropdown(options=comps), \n",
-    "    season=widgets.Dropdown(options=seasons),\n",
-    "    side=widgets.Dropdown(options=sides)\n",
+    "    seasons=widgets.SelectMultiple(options=seasons),\n",
+    "    comps=widgets.SelectMultiple(options=comps), \n",
+    "    side=widgets.Dropdown(options=sides, value=\"both\")\n",
     ")"
    ]
   },
