feat: added interact in rankings.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "players_oppositions.build_matrix('Matches', ID_COMP, SEASON, SIDE)"
+    "players_oppositions.build_matrix('Matches', [\"2024-2025\"], [\"Ligue 1\"], SIDE)"
    ]
   },
   {
@@ -265,9 +265,9 @@
     "interact(\n",
     "    players_oppositions.build_matrix, \n",
     "    stat=widgets.Dropdown(options=player_stats),\n",
-    "    id_comp=widgets.Dropdown(options=comps), \n",
-    "    season=widgets.Dropdown(options=seasons),\n",
-    "    side=widgets.Dropdown(options=sides)\n",
+    "    seasons=widgets.SelectMultiple(options=seasons),\n",
+    "    comps=widgets.SelectMultiple(options=comps), \n",
+    "    side=widgets.Dropdown(options=sides, value=\"both\")\n",
     ")"
    ]
   },
