feat: added interact in oppositions.

--- a/Oppositions.ipynb
+++ b/Oppositions.ipynb
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_oppositions = teams_oppositions.build_oppositions(TEAM_PSG, [\"Ligue 1\"], [], SIDE)"
+    "t_oppositions = teams_oppositions.build_oppositions(TEAM_PSG, [], [\"Ligue 1\"], SIDE)"
    ]
   },
   {
@@ -137,6 +137,21 @@
    "outputs": [],
    "source": [
     "show(t_oppositions, paging=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(\n",
+    "    teams_oppositions.build_oppositions_wrapper,\n",
+    "    team=widgets.Dropdown(options=[TEAM_PSG, TEAM_SRFC]),\n",
+    "    seasons=widgets.SelectMultiple(options=seasons),\n",
+    "    comps=widgets.SelectMultiple(options=comps),\n",
+    "    side=widgets.Dropdown(options=sides, value='both')\n",
+    ")"
    ]
   },
   {
@@ -172,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_oppositions = players_oppositions.build_oppositions(MBAPPE, [], [SEASON], SIDE)"
+    "p_oppositions = players_oppositions.build_oppositions(MBAPPE, [SEASON], [], SIDE)"
    ]
   },
   {
@@ -182,6 +197,21 @@
    "outputs": [],
    "source": [
     "show(p_oppositions, paging=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interact(\n",
+    "    players_oppositions.build_oppositions_wrapper,\n",
+    "    player=widgets.Dropdown(options=[PLAYER, GOUIRI, MBAPPE]),\n",
+    "    seasons=widgets.SelectMultiple(options=seasons),\n",
+    "    comps=widgets.SelectMultiple(options=comps),\n",
+    "    side=widgets.Dropdown(options=sides, value='both')\n",
+    ")"
    ]
   },
   {
